[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/levels/Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://res/images/pixel.svg" type="Texture" id=2]
[ext_resource path="res://src/tools/Fade.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/levels/SecondLevel.gd" type="Script" id=4]
[ext_resource path="res://src/entities/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/entities/Pellet.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/entities/Enemy.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4498.5, 26 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 159.5, 101 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 159.5, 2000 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 99, 25 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 399, 50 )

[node name="SecondLevel" instance=ExtResource( 1 )]
position = Vector2( -2, -1 )
script = ExtResource( 4 )
SCORE_PREFIX = ""

[node name="Level2Trigger" type="Position2D" parent="DialogHandler" index="0"]
position = Vector2( 4825, 305 )
scale = Vector2( 0.1, 1 )
__meta__ = {
"_gizmo_extents_": 719.2
}

[node name="EnemySightTrigger" type="Position2D" parent="DialogHandler" index="1"]
position = Vector2( 2523, -1522 )
scale = Vector2( 0.1, 1 )
__meta__ = {
"_gizmo_extents_": 719.2
}

[node name="Objects" type="Node2D" parent="." index="2"]

[node name="Ground" type="StaticBody2D" parent="Objects" index="0"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 512, 580 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Ground" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
position = Vector2( 3967, -2 )
scale = Vector2( 9002, 50 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Ground" index="1"]
position = Vector2( 3966.5, -1 )
shape = SubResource( 1 )

[node name="Terrain2" type="StaticBody2D" parent="Objects" index="1"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 1489, 461 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain2" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 319.75, 198.688 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain2" index="1"]
position = Vector2( 0, 2 )
shape = SubResource( 2 )

[node name="Terrain21" type="StaticBody2D" parent="Objects" index="2"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 3025, 457 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain21" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 319.75, 198.688 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain21" index="1"]
position = Vector2( 0, 2 )
shape = SubResource( 2 )

[node name="Terrain3" type="StaticBody2D" parent="Objects" index="3"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 4122, -1509 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain3" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 319.75, 4000 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain3" index="1"]
position = Vector2( 0, 2 )
shape = SubResource( 3 )

[node name="Terrain4" type="StaticBody2D" parent="Objects" index="4"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 1975, 230 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain4" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 200, 50 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain4" index="1"]
shape = SubResource( 4 )

[node name="Terrain5" type="StaticBody2D" parent="Objects" index="5"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 1603, 57 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain5" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 200, 50 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain5" index="1"]
shape = SubResource( 4 )

[node name="Terrain6" type="StaticBody2D" parent="Objects" index="6"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 1254, -95 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain6" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 200, 50 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain6" index="1"]
shape = SubResource( 4 )

[node name="Terrain17" type="StaticBody2D" parent="Objects" index="7"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 997, -244 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain17" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 200, 50 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain17" index="1"]
shape = SubResource( 4 )

[node name="Terrain7" type="StaticBody2D" parent="Objects" index="8"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 736, -413 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain7" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 200, 50 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain7" index="1"]
shape = SubResource( 4 )

[node name="Terrain18" type="StaticBody2D" parent="Objects" index="9"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 518, -568 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain18" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 200, 50 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain18" index="1"]
shape = SubResource( 4 )

[node name="Terrain19" type="StaticBody2D" parent="Objects" index="10"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 933, -746 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain19" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 200, 50 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain19" index="1"]
shape = SubResource( 4 )

[node name="Terrain8" type="StaticBody2D" parent="Objects" index="11"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 1235, -843 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain8" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 200, 50 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain8" index="1"]
shape = SubResource( 4 )

[node name="Terrain9" type="StaticBody2D" parent="Objects" index="12"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 1560, -1039 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain9" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 200, 50 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain9" index="1"]
shape = SubResource( 4 )

[node name="Terrain10" type="StaticBody2D" parent="Objects" index="13"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 751, -1059 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain10" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 200, 50 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain10" index="1"]
shape = SubResource( 4 )

[node name="Terrain20" type="StaticBody2D" parent="Objects" index="14"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 533, -1251 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain20" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 200, 50 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain20" index="1"]
shape = SubResource( 4 )

[node name="Terrain11" type="StaticBody2D" parent="Objects" index="15"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 307, -1411 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain11" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 200, 50 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain11" index="1"]
shape = SubResource( 4 )

[node name="Terrain14" type="StaticBody2D" parent="Objects" index="16"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 865, -1537 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain14" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 200, 50 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain14" index="1"]
shape = SubResource( 4 )

[node name="Terrain15" type="StaticBody2D" parent="Objects" index="17"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 451, -1776 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain15" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 200, 50 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain15" index="1"]
shape = SubResource( 4 )

[node name="Terrain16" type="StaticBody2D" parent="Objects" index="18"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 990, -1978 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain16" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 200, 50 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain16" index="1"]
shape = SubResource( 4 )

[node name="Terrain12" type="StaticBody2D" parent="Objects" index="19"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 1935, -1267 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain12" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 200, 50 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain12" index="1"]
shape = SubResource( 4 )

[node name="Terrain13" type="StaticBody2D" parent="Objects" index="20"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 2843, -1410 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain13" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 800, 100 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain13" index="1"]
shape = SubResource( 5 )

[node name="Entities" type="Node2D" parent="." index="3"]

[node name="Player" parent="Entities" index="0" instance=ExtResource( 5 )]
position = Vector2( 506, 326 )
BOUNDS = Vector2( 0, 8294 )

[node name="Pellets" type="Node2D" parent="Entities" index="1"]

[node name="0" parent="Entities/Pellets" index="0" instance=ExtResource( 6 )]
position = Vector2( 1095, 451 )
z_index = 5
weight = 0.1

[node name="1" parent="Entities/Pellets" index="1" instance=ExtResource( 6 )]
position = Vector2( 1168, 514 )
z_index = 5
weight = 0.1

[node name="2" parent="Entities/Pellets" index="2" instance=ExtResource( 6 )]
position = Vector2( 1734, 514 )
z_index = 5
weight = 0.1

[node name="3" parent="Entities/Pellets" index="3" instance=ExtResource( 6 )]
position = Vector2( 1828, 467 )
z_index = 5
weight = 0.1

[node name="4" parent="Entities/Pellets" index="4" instance=ExtResource( 6 )]
position = Vector2( 2046, 166 )
z_index = 5
weight = 0.1

[node name="5" parent="Entities/Pellets" index="5" instance=ExtResource( 6 )]
position = Vector2( 1175, -151 )
z_index = 5
weight = 0.1

[node name="6" parent="Entities/Pellets" index="6" instance=ExtResource( 6 )]
position = Vector2( 680, -474 )
z_index = 5
weight = 0.1

[node name="7" parent="Entities/Pellets" index="7" instance=ExtResource( 6 )]
position = Vector2( 388, -1836 )
z_index = 5
weight = 0.1

[node name="8" parent="Entities/Pellets" index="8" instance=ExtResource( 6 )]
position = Vector2( 1060, -2033 )
z_index = 5
weight = 0.1

[node name="9" parent="Entities/Pellets" index="9" instance=ExtResource( 6 )]
position = Vector2( 1013, -2075 )
z_index = 5
weight = 0.1

[node name="10" parent="Entities/Pellets" index="10" instance=ExtResource( 6 )]
position = Vector2( 3175, -1493 )
z_index = 5
weight = 0.1

[node name="11" parent="Entities/Pellets" index="11" instance=ExtResource( 6 )]
position = Vector2( 3129, -1535 )
z_index = 5
weight = 0.1

[node name="12" parent="Entities/Pellets" index="12" instance=ExtResource( 6 )]
position = Vector2( 3077, -1497 )
z_index = 5
weight = 0.1

[node name="13" parent="Entities/Pellets" index="13" instance=ExtResource( 6 )]
position = Vector2( 3043, -1583 )
z_index = 5
weight = 0.1

[node name="14" parent="Entities/Pellets" index="14" instance=ExtResource( 6 )]
position = Vector2( 2716, 450 )
z_index = 5
weight = 0.1

[node name="15" parent="Entities/Pellets" index="15" instance=ExtResource( 6 )]
position = Vector2( 2222, 496 )
z_index = 5
weight = 0.1

[node name="18" parent="Entities/Pellets" index="16" instance=ExtResource( 6 )]
position = Vector2( 3440, 500 )
z_index = 5
weight = 0.1

[node name="16" parent="Entities/Pellets" index="17" instance=ExtResource( 6 )]
position = Vector2( 2620, 502 )
z_index = 5
weight = 0.1

[node name="17" parent="Entities/Pellets" index="18" instance=ExtResource( 6 )]
position = Vector2( 2766, 496 )
z_index = 5
weight = 0.1

[node name="19" parent="Entities/Pellets" index="19" instance=ExtResource( 6 )]
position = Vector2( 1544, -1104 )
z_index = 5
weight = 0.1

[node name="20" parent="Entities/Pellets" index="20" instance=ExtResource( 6 )]
position = Vector2( 512, -1317 )
z_index = 5
weight = 0.1

[node name="21" parent="Entities/Pellets" index="21" instance=ExtResource( 6 )]
position = Vector2( 458, -1371 )
z_index = 5
weight = 0.1

[node name="Enemies" type="Node2D" parent="Entities" index="2"]

[node name="Enemy" parent="Entities/Enemies" index="0" instance=ExtResource( 7 )]
position = Vector2( 2898, -1514 )
BOUNDS = Vector2( 2791.99, 3172 )

[node name="Lights" type="Node2D" parent="." index="4"]

[node name="Fades" type="Node2D" parent="." index="5"]

[node name="First" parent="Fades" index="0" instance=ExtResource( 3 )]
position = Vector2( 943, 249 )
scale = Vector2( 2000, 800 )

[node name="Second" parent="Fades" index="1" instance=ExtResource( 3 )]
position = Vector2( 4793, 225 )
scale = Vector2( 1500, 800 )

[connection signal="dialog_playing" from="DialogHandler" to="." method="_on_DialogHandler_dialog_playing"]
[connection signal="dialog_playing" from="DialogHandler" to="Entities/Player" method="_on_DialogHandler_dialog_playing"]
[connection signal="playDialog" from="Entities/Player" to="DialogHandler" method="playDialogOption"]
[connection signal="finished" from="Fades/First" to="." method="_on_Fade_First_finished"]
[connection signal="finished" from="Fades/Second" to="." method="_on_Fade_Second_finished"]
